# SaborIA

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
agents/: __init__.py  nutrition.py  quality.py  recommendation.py  retry.py  supervisor.py
api/: main.py  middleware.py  settings.py
data/sample_menus/: bella_terra.txt
evals/: runner.py
experiments/: __init__.py  compare_models.py
ingestion/: pipeline.py
scripts/: generate_synthetic_menus.py
tests/: conftest.py  test_agents.py  test_api.py  test_pipeline.py  test_retry.py  test_supervisor.py
