[project]
name = "saborai"
version = "0.1.0"
description = "Multi-agent RAG system for restaurant menu analysis"
requires-python = ">=3.11"

[project.dependencies]

[project.scripts]
generate-menus = "scripts.generate_synthetic_menus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "requires_api: marks tests that require a real OpenAI API key",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
